# isyncyou

./: .editorconfig  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SHOWCASE.md  deny.toml  justfile  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  epic.md  story.md  task.md
.github/workflows/: actionlint.yml  advisory-review-reminder.yml  auto-label.yml  ci.yml  codeql.yml  coverage.yml  dependabot-automerge.yml  evidence-manifest.yml  language-check.yml  pr-dev.yml  pr-main.yml  pr-staging.yml  pr-title-check.yml  promote-watchdog.yml  promote.yml  release.yml  scorecard.yml  secret-scan.yml  verify-docs.yml
android/: .gitignore  AndroidManifest.xml  README.md  build.gradle.kts  build.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
crates/acceptance/: Cargo.toml
crates/acceptance/src/: lib.rs
crates/acceptance/tests/: chaos.rs  mvp.rs
crates/agent/: Cargo.toml
crates/agent/examples/: reduce_local_drift.rs
crates/agent/src/: archive.rs  confirm.rs  connectivity.rs  drift_capture.rs  error.rs  http.rs  lib.rs  oauth.rs  pairing_v2.rs  product_provider.rs  provider.rs  retrieval.rs  runtime_lock.rs  secrets.rs  session.rs  session_crypto.rs  session_ids.rs  session_v2.rs  stream.rs  tool.rs  turn.rs
crates/agent/src/provider/: anthropic.rs  codex.rs  fake.rs  openai.rs  subscription.rs
crates/agent/tests/: experimental_boundary.rs  live_session_onedrive.rs  live_subscription.rs
crates/api/: Cargo.toml
crates/app-host/: Cargo.toml
crates/app-host/src/: account_identity.rs  account_lifecycle.rs  agent_control_store.rs  agent_ops.rs  lib.rs  local_cli_fallback.rs  mobile_jobs.rs  product_session.rs
crates/app-host/tests/: product_feature_boundary.rs
crates/change-source/: Cargo.toml
crates/change-source/src/: fanotify.rs  lib.rs  reconcile.rs  source.rs  watch.rs  watcher.rs
crates/connectors/: Cargo.toml
crates/connectors/examples/: seed_fixture.rs
crates/connectors/src/: archive.rs  calendar.rs  common.rs  contacts.rs  export.rs  lib.rs  mail.rs  mime.rs  onedrive.rs  onenote.rs  quickxor.rs  restore.rs  scope.rs  shared.rs  todo.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  conflict.rs  envelope.rs  guard.rs  lib.rs  obs.rs  onedrive_mode.rs  pending.rs  policy.rs  recovery.rs  sync_state.rs
crates/dbus-status/: Cargo.toml
crates/dbus-status/examples/: serve_demo.rs
crates/dbus-status/src/: lib.rs
crates/doctor-lib/: Cargo.toml
crates/doctor-lib/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/examples/: crash_matrix.rs
crates/engine/src/: calendar_live.rs  contacts_live.rs  lib.rs  mail_live.rs  mail_restore.rs  onedrive_live.rs  onedrive_write.rs  onenote_live.rs  restore_calendar.rs  restore_contacts.rs  restore_key.rs  restore_onenote.rs  restore_recovery.rs  restore_todo.rs  task_live.rs  verify.rs
crates/fuse/: Cargo.toml
crates/fuse/src/: lib.rs
crates/graph/: Cargo.toml
crates/graph/src/: auth.rs  client.rs  error.rs  http.rs  lib.rs  push.rs  throttle.rs  upload.rs
crates/ipc-types/: Cargo.toml
crates/mobile/: Cargo.toml
crates/mobile/src/: lib.rs
crates/pathmap/: Cargo.toml
crates/pbs/: Cargo.toml
crates/store/: Cargo.toml
crates/store/src/: lib.rs
docs/: ARCHITECTURE.md  README.md  acceptance-v0.1.md  android-delivery-epic.md  android-distribution.md  auth-token-lifecycle.md  delete-trash-conflict-model.md  fuse-on-demand.md  graph-capability-matrix.md  html-viewer-security.md  local-api-security.md  packaging-daemon-model.md  path-mapping.md  restore-fidelity-matrix.md  sqlite-snapshot-consistency.md  supply-chain.md  sync-state-machine.md  test-chaos-matrix.md
docs/adr/: 001-restore-semantics.md  002-request-body-api.md  003-direct-graph-token-model.md  004-csp-per-mode.md  005-android-build-system.md  006-push-relay.md  007-agent-architecture.md  README.md
docs/ai/: AI_ASSISTED_ENGINEERING_PROTOCOL.md  CODEX_WORKFLOW.md
docs/case-study/: fde-case-study.md
docs/evidence/: README.md  agent-epic-verification.md  issue-618-manifest.json  issue-619-manifest.json  issue-620-manifest.json  issue-621-manifest.json  issue-622-manifest.json  issue-623-manifest.json  issue-624-manifest.json  issue-625-manifest.json  issue-626-manifest.json  (+11 more)
gui/statusbar-app/: Cargo.toml
gui/statusbar-app/src/: main.rs
gui/webui/: Cargo.toml  README.md
gui/webui/src/: app.css  app.js  index.html  lib.rs  serve.rs  view.rs
packaging/: README.md  build-appimage.sh  isyncyou.toml.sample  isyncyoud.service
packaging/dolphin/: CMakeLists.txt  install.sh  isyncyou-dolphin.spec  isyncyou-share-invite  org.silentspike.iSyncYou.desktop
packaging/dolphin/overlay-plugin/: CMakeLists.txt  README.md  isyncyouoverlayplugin.cpp  isyncyouoverlayplugin.h
spikes/: probe_onedrive.py
tools/: agent-account-lifecycle-device-probe.py  agent-account-lifecycle-ui-smoke.mjs  agent-epic-closeout-probe.py  agent-network-device-probe.py  agent-network-ui-smoke.mjs  agent-ui-smoke.mjs  agent-wizard-smoke.mjs  android-at-rest-sentinel-scan.sh  android-bridge-isolation-probe.py  android-mobile-job-probe.py  build-android-native.sh  capture-agent-local-drift.sh  check_evidence.py  check_language.py  check_traceability.py  check_workflow_pins.py  ci-ui-smoke.mjs  generate_evidence_manifest.py  generate_sbom.py  graph_delta_probe.py  graph_throttle_probe.py  lang_allowlist.txt  live_calendar_probe.py  live_contacts_probe.py  live_onenote_probe.py  live_pbs_roundtrip.py  live_restore_probe.py  live_todo_probe.py  microsoft-account-ui-smoke.mjs  regression-probe.sh  release_workflow_contract.py  run-nonempty-cargo-filter.sh  serve-smoke.sh  test-run-nonempty-cargo-filter.sh  test_agent_account_lifecycle_device_probe.py  test_agent_epic_closeout_probe.py  test_agent_experimental_boundary.py  test_agent_network_device_probe.py  test_android_mobile_job_probe.py  test_android_native_build_boundary.py  (+8 more)
(+240 files in other folders)
