[workspace]
resolver = "2"
members = ["crates/*", "bin/*", "gui/statusbar", "gui/statusbar-app", "gui/webui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/silentspike/isyncyou"
authors = ["silentspike"]
rust-version = "1.90"

# Declared centrally; pulled in by members as features get implemented.
[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
tiny-skia = "0.11"
cosmic-text = "0.19"
taffy = "0.5"
winit = "0.30"
softbuffer = "0.4"
