[workspace]
resolver = "2"
members = ["crates/*", "bin/*", "gui/statusbar", "gui/statusbar-app", "gui/webui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/silentspike/isyncyou"
authors = ["silentspike"]
# Effective MSRV is set by libsqlite3-sys 0.38 (rusqlite 0.40), whose build script
# uses `cfg_select` — stabilized in 1.95. Verified empirically: 1.94 fails (E0658),
# 1.95.0 builds the whole workspace. Guarded by the `msrv` CI job (#408).
rust-version = "1.95"

# Declared centrally; pulled in by members as features get implemented.
[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Bundling is selected by the `isyncyou-store` crate's own features
# (`encrypted-store` = SQLCipher+OpenSSL for desktop; `plain-store` = bundled
# sqlite for Android, no OpenSSL). Do NOT pin a bundling feature here, or every
# build (incl. the Android cross-compile) would inherit SQLCipher/OpenSSL.
rusqlite = { version = "0.40" }
tiny-skia = "0.11"
cosmic-text = "0.12"
taffy = "0.5"
winit = "0.30"
softbuffer = "0.4"
