[package]
name = "isyncyou-agent"
description = "In-app M365 agent harness: provider-agnostic turn loop, a single app-scoped `isyncyou` tool, and a FakeProvider for CI (no real LLM tokens)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# Live LLM HTTP transport (the agent's OWN client, not GraphClient). Off by default so
# the pure-logic build (loop, tools, FakeProvider) stays fast and dependency-light;
# the retry/backoff classification is pure and tested without this feature.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }
# Real archive retrieval (Store + Config + export). Optional/off by default so the
# pure core (loop, tools, FakeProvider, ArchiveSource logic) stays light; pulling the
# store also pulls SQLCipher. The executor logic is generic over `ArchiveSource` and is
# tested with an in-memory fake without this feature.
isyncyou-store = { path = "../store", default-features = false, optional = true }
isyncyou-core = { path = "../core", optional = true }
isyncyou-connectors = { path = "../connectors", default-features = false, optional = true }

[features]
http = ["dep:reqwest"]
# Match the desktop encrypted profile so store's rusqlite bundling resolves and unifies
# with the rest of the workspace (everyone on encrypted-store → no bundling conflict).
retrieval = ["dep:isyncyou-store", "dep:isyncyou-core", "dep:isyncyou-connectors", "isyncyou-store/encrypted-store"]
