[package]
name = "isyncyou-app-host"
description = "Shared web-UI router assembly + live request handlers, reused by the desktop daemon and the standalone mobile client (#89)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
isyncyou-core = { path = "../core" }
isyncyou-store = { path = "../store", default-features = false }
isyncyou-graph = { path = "../graph", features = ["http"] }
isyncyou-connectors = { path = "../connectors", features = ["http"], default-features = false }
isyncyou-engine = { path = "../engine", default-features = false }
isyncyou-webui = { path = "../../gui/webui", default-features = false }
# Agent harness (S-AG.6/#621). Default features only — no store/SQLCipher pull, so it
# adds no bundling-feature pressure to the encrypted/plain chains. The real retrieval
# executor + official providers (the store/http/onedrive features) land with S-AG.8/#623.
isyncyou-agent = { path = "../agent" }
serde_json = { workspace = true }

[dev-dependencies]
filetime = "0.2"

[features]
# Desktop default; the mobile crate depends with default-features = false so the
# whole chain (store, engine, connectors, webui) builds plain (no SQLCipher/OpenSSL,
# no D-Bus keyring) for Android. See #89 P0.
default = ["encrypted-store", "desktop-keyring"]
desktop-keyring = ["isyncyou-engine/desktop-keyring"]
encrypted-store = [
    "isyncyou-store/encrypted-store",
    "isyncyou-engine/encrypted-store",
    "isyncyou-connectors/encrypted-store",
    "isyncyou-webui/encrypted-store",
]
plain-store = [
    "isyncyou-store/plain-store",
    "isyncyou-engine/plain-store",
    "isyncyou-connectors/plain-store",
    "isyncyou-webui/plain-store",
]
# EXPERIMENTAL, default-OFF, personal-build only (risk R8): enables the subscription
# OAuth login + provider in the agent harness. Never enabled in CI/release artifacts;
# the operator opts in for their own Desktop/Android build. Pulls the agent's http
# stack (reqwest/rustls) AND the real retrieval executor (`StoreArchive` over the
# encrypted store + body files, S-AG.18/#643) so the assistant actually searches the
# archive instead of the stub.
agent-subscription-experimental = [
    "isyncyou-agent/agent-subscription-experimental",
    "isyncyou-agent/retrieval",
]
