[package]
name = "isyncyou-app-host"
description = "Shared web-UI router assembly + live request handlers, reused by the desktop daemon and the standalone mobile client (#89)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
isyncyou-core = { path = "../core" }
isyncyou-store = { path = "../store", default-features = false }
isyncyou-graph = { path = "../graph", features = ["http"] }
isyncyou-connectors = { path = "../connectors", features = ["http"], default-features = false }
isyncyou-engine = { path = "../engine", default-features = false }
isyncyou-webui = { path = "../../gui/webui", default-features = false }
# Agent harness (S-AG.6/#621). The app-host feature flags below decide whether to
# compile the product OAuth provider/retrieval path or the #627 local fallback surface.
isyncyou-agent = { path = "../agent" }
serde_json = { workspace = true }
serde = { workspace = true }
base64 = "0.22"
ring = "0.17"
rusqlite = { workspace = true }
libc = "0.2"
fs2 = "0.4"
zeroize = "1"

[dev-dependencies]
filetime = "0.2"

[features]
# Desktop default; the mobile crate depends with default-features = false so the
# whole chain (store, engine, connectors, webui) builds plain (no SQLCipher/OpenSSL,
# no D-Bus keyring) for Android. See #89 P0.
default = ["encrypted-store", "desktop-keyring", "agent-oauth-providers"]
desktop-keyring = ["isyncyou-engine/desktop-keyring"]
encrypted-store = [
    "isyncyou-store/encrypted-store",
    "isyncyou-engine/encrypted-store",
    "isyncyou-connectors/encrypted-store",
    "isyncyou-webui/encrypted-store",
]
plain-store = [
    "isyncyou-store/plain-store",
    "isyncyou-engine/plain-store",
    "isyncyou-connectors/plain-store",
    "isyncyou-webui/plain-store",
]
# Product Claude/Codex app-OAuth provider path (#623): provider runtime + encrypted
# CredentialStore loading + real retrieval executor (`StoreArchive` over the encrypted
# store + body files, S-AG.3/#618). Local CLI credential fallback is deliberately not
# part of this feature.
agent-oauth-providers = [
    "isyncyou-agent/agent-oauth-providers",
    "isyncyou-agent/onedrive",
    "isyncyou-agent/retrieval",
]
# EXPERIMENTAL, default-OFF, personal-build only (risk R8/#627): local CLI
# fallback/capture surface. This is a superset of the product runtime plus the
# agent's experimental wire/capture helpers; keep it out of release/CI product ACs.
agent-subscription-experimental = [
    "agent-oauth-providers",
    "isyncyou-agent/agent-subscription-experimental",
]
# TEST/EVIDENCE ONLY, default-OFF: bounded app-private hold points for mobile
# process-death recovery evidence. Never reachable from the product router.
mobile-job-device-test-hooks = []
# TEST/EVIDENCE ONLY, default-OFF (#640): enables JNI-only network diagnostic
# hooks in mobile builds. It never creates an HTTP/WebView/router surface.
agent-network-device-test-hooks = ["agent-oauth-providers"]
# TEST/EVIDENCE ONLY, default-OFF (#645): deterministic account-lifecycle hold/crash
# checkpoints armed exclusively through the mobile crate's JNI-only control.
agent-account-lifecycle-device-test-hooks = ["agent-oauth-providers"]
