[package]
name = "isyncyou-change-source"
description = "Pluggable change detection: inotify (desktop) | eBPF/fanotify (server) + periodic reconciler."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
notify = "8.2.0"

[dev-dependencies]
tempfile = "3.27.0"
