[package]
name = "isyncyou-change-source"
description = "Pluggable change detection: inotify (desktop) | eBPF/fanotify (server) + periodic reconciler."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
notify = "8.2.0"
# `ChangeSource` config enum (backend selection). core has no dep on this crate,
# so this edge is acyclic.
isyncyou-core = { path = "../core" }

# fanotify (privileged, mount-wide server backend) uses raw Linux syscalls.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
