[package]
name = "isyncyou-connectors"
description = "Connector trait + onedrive/mail/calendar/contacts/todo/onenote modules."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
isyncyou-graph = { path = "../graph" }
isyncyou-store = { path = "../store" }
isyncyou-pathmap = { path = "../pathmap" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
# Enable the live reqwest transport (pulls graph's http feature).
http = ["isyncyou-graph/http"]

[dev-dependencies]
tempfile = "3"
