[package]
name = "isyncyou-connectors"
description = "Connector trait + onedrive/mail/calendar/contacts/todo/onenote modules."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
isyncyou-graph = { path = "../graph" }
isyncyou-store = { path = "../store", default-features = false }
isyncyou-pathmap = { path = "../pathmap" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
# Enable the live reqwest transport (pulls graph's http feature).
http = ["isyncyou-graph/http"]
# Forward the store at-rest-encryption profile so the whole dep chain (engine,
# webui) can pick plain-store for Android. Desktop default = encrypted-store.
default = ["encrypted-store"]
encrypted-store = ["isyncyou-store/encrypted-store"]
plain-store = ["isyncyou-store/plain-store"]

[dev-dependencies]
tempfile = "3"
