[package]
name = "isyncyou-core"
description = "Job model, scheduler, sync-state machine, conflict engine, config, self-check."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
