[package]
name = "isyncyou-doctor-lib"
description = "Sync/data doctor: DB/index/state/hash/orphan checks (dry-run)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
isyncyou-core = { path = "../core" }
fs2 = "0.4"
serde_json = { workspace = true }
