[package]
name = "isyncyou-fuse"
description = "On-demand placeholder filesystem (FUSE) for an account's OneDrive tree."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# default-features off => no libfuse link / no pkg-config; mount via fusermount3.
fuser = { version = "0.15", default-features = false }
libc = "0.2"
isyncyou-store = { path = "../store" }
