[package]
name = "isyncyou-graph"
description = "Microsoft Graph: OAuth (PKCE/device-code), delta, throttle/429, upload sessions, immutable-id policy."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde_json = { workspace = true }
