[package]
name = "isyncyou-graph"
description = "Microsoft Graph: OAuth (PKCE/device-code), delta, throttle/429, upload sessions, immutable-id policy."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }

[features]
# Live HTTP transport (reqwest + rustls). Off by default so the pure-logic build
# stays fast and dependency-light; enable for live tests / the daemon.
http = ["dep:reqwest"]
