[package]
name = "isyncyou-graph"
description = "Microsoft Graph: OAuth (PKCE/device-code), delta, throttle/429, upload sessions, immutable-id policy."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
ring = "0.17"
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
keyring-core = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["rt-tokio-crypto-rust"], optional = true }

[features]
# Live HTTP transport (reqwest + rustls). Off by default so the pure-logic build
# stays fast and dependency-light; enable for live tests / the daemon.
http = ["dep:reqwest"]
desktop-keyring = ["dep:keyring-core", "dep:zbus-secret-service-keyring-store"]
