[package]
name = "isyncyou-mobile"
description = "Standalone Android client (#89): embeds the iSyncYou engine in-process and serves the web UI over loopback, reached by the app's WebView. JNI entry for Kotlin."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "isyncyou_mobile"
crate-type = ["cdylib"]

[dependencies]
isyncyou-core = { path = "../core" }
isyncyou-store = { path = "../store", default-features = false }
isyncyou-webui = { path = "../../gui/webui", default-features = false }
isyncyou-app-host = { path = "../app-host", default-features = false }
isyncyou-engine = { path = "../engine", default-features = false }
isyncyou-agent = { path = "../agent", optional = true }
serde_json = { workspace = true }
jni = "0.22"

[features]
# Android ships SQLCipher (#0B): the vendored-OpenSSL arm64 cross-build works via
# cargo-ndk + NDK r27, so the phone's store DB is encrypted at rest with a
# hardware-backed (Android Keystore) key. Body files get their own AES-256-GCM
# envelope (`isyncyou-core::envelope`). With no key installed the store still opens
# plaintext (host tests), so only the on-device run is encrypted.
default = ["encrypted-store"]
plain-store = [
    "isyncyou-store/plain-store",
    "isyncyou-webui/plain-store",
    "isyncyou-app-host/plain-store",
    "isyncyou-engine/plain-store",
]
encrypted-store = [
    "isyncyou-store/encrypted-store",
    "isyncyou-webui/encrypted-store",
    "isyncyou-app-host/encrypted-store",
    "isyncyou-engine/encrypted-store",
]
# EXPERIMENTAL, default-OFF, personal-build only (risk R8): the in-app subscription
# OAuth login + provider. Enabled only for the operator's own APK via
# ISY_CARGO_FEATURES; never in CI/release artifacts.
agent-subscription-experimental = ["isyncyou-app-host/agent-subscription-experimental"]
# TEST/EVIDENCE ONLY, default-OFF: exposes a JNI-only Argon2id/HKDF session-key
# benchmark for Pixel evidence in #619. It is not wired to WebView, HTTP, or the normal
# bridge, and release/CI builds leave ISY_CARGO_FEATURES unset.
agent-session-kdf-bench = ["dep:isyncyou-agent"]

[dev-dependencies]
tempfile = "3"
