[package]
name = "isyncyou-store"
description = "SQLite (id-based) + FTS5 store, migrations, snapshot/quiesce."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
