[package]
name = "isyncyou-webui"
description = "Local web UI API: pure request router over the store/config (served by the daemon)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde_json = { workspace = true }
isyncyou-core = { path = "../../crates/core" }
isyncyou-store = { path = "../../crates/store" }
# MIME HTML extraction for the mail viewer (no `http` feature → no reqwest).
isyncyou-connectors = { path = "../../crates/connectors" }
# Battle-tested allowlist HTML sanitizer for the mail viewer (MIT).
ammonia = "4"

[dev-dependencies]
tempfile = "3"
