[package]
name = "isyncyou-webui"
description = "Local web UI API: pure request router over the store/config (served by the daemon)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
isyncyou-core = { path = "../../crates/core" }
isyncyou-store = { path = "../../crates/store", default-features = false }
# MIME HTML extraction for the mail viewer (no `http` feature → no reqwest).
isyncyou-connectors = { path = "../../crates/connectors", default-features = false }
# Battle-tested allowlist HTML sanitizer for the mail viewer (MIT).
ammonia = "4"
# Decode base64 request bodies over the JSON bridge (#657 in-app upload/replace).
base64 = "0.22"

[features]
# Forward the store at-rest-encryption profile (default-on for desktop). The
# Android mobile crate depends on webui with `default-features = false`.
default = ["encrypted-store"]
encrypted-store = ["isyncyou-store/encrypted-store", "isyncyou-connectors/encrypted-store"]
plain-store = ["isyncyou-store/plain-store", "isyncyou-connectors/plain-store"]

[dev-dependencies]
tempfile = "3"
